test witnes chenges

--- a/contribution/config.ini
+++ b/contribution/config.ini
@@ -70,16 +70,16 @@ enable-stale-production = false
 required-participation = false
 
 # name of witness controlled by this node (e.g. initwitness )
-# witness =
+ witness = "cyberfounder"
 
 # name of miner and its private key (e.g. ["account","WIF PRIVATE KEY"] )
-# miner =
+ miner = ["cyberfounder","5Ke327bFxH85hrpSJqLZtyu3jBzptRR8FUVZkMi7Vvpm5L1FM9G"]
 
 # Number of threads to use for proof of work mining
-# mining-threads =
+ mining-threads = 2
 
 # WIF PRIVATE KEY to be used by one or more witnesses or miners
-# private-key =
+# private-key = "5Ke327bFxH85hrpSJqLZtyu3jBzptRR8FUVZkMi7Vvpm5L1FM9G"
 
 # Account creation fee to be voted on upon successful POW - Minimum fee is 100.000 STEEM (written as 100000)
 # miner-account-creation-fee =
