fix  seed-node =

--- a/contribution/config.ini
+++ b/contribution/config.ini
@@ -5,7 +5,7 @@
 # p2p-max-connections =
 
 # P2P nodes to connect to on startup (may specify multiple times)
-# seed-node =
+seed-node = 136.243.171.24:2001
 
 # Pairs of [BLOCK_NUM,BLOCK_ID] that should be enforced as checkpoints.
 # checkpoint =
@@ -82,7 +82,7 @@ required-participation = false
 # private-key = "5Ke327bFxH85hrpSJqLZtyu3jBzptRR8FUVZkMi7Vvpm5L1FM9G"
 
 # Account creation fee to be voted on upon successful POW - Minimum fee is 100.000 STEEM (written as 100000)
-# miner-account-creation-fee =
+# miner-account-creation-fee = 
 
 # Maximum block size (in bytes) to be voted on upon successful POW - Max block size must be between 128 KB and 750 MB
 # miner-maximum-block-size =
