--- a/contribution/config.ini
+++ b/contribution/config.ini
@@ -5,7 +5,7 @@
 # p2p-max-connections =
 
 # P2P nodes to connect to on startup (may specify multiple times)
-seed-node = 136.243.171.24:2001
+# seed-node = 136.243.171.24:2001
 
 # Pairs of [BLOCK_NUM,BLOCK_ID] that should be enforced as checkpoints.
 # checkpoint =
@@ -31,10 +31,10 @@ seed-node = 136.243.171.24:2001
 shared-file-size = 12G
 
 # Set an API to be publicly available, may be specified multiple times
-public-api = database_api login_api account_by_key_api network_broadcast_api tag_api follow_api market_history_api raw_block_api
+public-api = database_api login_api account_by_key_api network_broadcast_api tag_api follow_api market_history_api raw_block_api debug_node_api
 
 # Plugin(s) to enable, may be specified multiple times
-enable-plugin = witness account_history account_by_key tags follow market_history raw_block
+enable-plugin = witness account_history account_by_key tags follow market_history raw_block debug_node
 
 # JSON list of [nblocks,nseconds] pairs, see documentation/bcd-trigger.md
 bcd-trigger = [[0,10],[85,300]]
@@ -70,13 +70,13 @@ enable-stale-production = false
 required-participation = false
 
 # name of witness controlled by this node (e.g. initwitness )
- witness = "cyberfounder"
+# witness = "cyberfounder"
 
 # name of miner and its private key (e.g. ["account","WIF PRIVATE KEY"] )
- miner = ["cyberfounder","5Ke327bFxH85hrpSJqLZtyu3jBzptRR8FUVZkMi7Vvpm5L1FM9G"]
+# miner = ["miner1","5Ke327bFxH85hrpSJqLZtyu3jBzptRR8FUVZkMi7Vvpm5L1FM9G"]
 
 # Number of threads to use for proof of work mining
- mining-threads = 2
+# mining-threads = 2
 
 # WIF PRIVATE KEY to be used by one or more witnesses or miners
 # private-key = "5Ke327bFxH85hrpSJqLZtyu3jBzptRR8FUVZkMi7Vvpm5L1FM9G"
